[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/char_idle_02.png" type="Texture" id=1]
[ext_resource path="res://assets/pizzabox1.png" type="Texture" id=2]
[ext_resource path="res://assets/char_idle_03.png" type="Texture" id=3]
[ext_resource path="res://Player.gd" type="Script" id=4]
[ext_resource path="res://assets/char_idle_04.png" type="Texture" id=5]
[ext_resource path="res://assets/char_idle_05.png" type="Texture" id=6]
[ext_resource path="res://assets/char_idle_06.png" type="Texture" id=7]
[ext_resource path="res://assets/pizzabox2.png" type="Texture" id=8]
[ext_resource path="res://assets/pizzabox3.png" type="Texture" id=9]
[ext_resource path="res://assets/char_idle_07.png" type="Texture" id=10]
[ext_resource path="res://assets/char_idle_08.png" type="Texture" id=11]

[sub_resource type="CircleShape2D" id=4]
radius = 21.0238

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "delivered",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 15, 10 )

[sub_resource type="Animation" id=8]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/PizzaAnimatedSprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, -4 ), Vector2( -20, -20 ), Vector2( -40, 10 ), Vector2( -180, 500 ) ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 146, 398 )
collision_layer = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 4 )

[node name="Sprite" type="Node2D" parent="."]

[node name="PizzaAnimatedSprite2" type="AnimatedSprite" parent="Sprite"]
position = Vector2( 2, -4 )
frames = SubResource( 6 )
playing = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sprite"]
frames = SubResource( 5 )
animation = "dead"
frame = 1
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="StompDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( 1, 28 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 8 )

[node name="LeftWallRaycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="LeftWallRaycasts"]
position = Vector2( -18, -2 )
enabled = true
cast_to = Vector2( -10, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="LeftWallRaycasts"]
position = Vector2( -18, 20 )
enabled = true
cast_to = Vector2( -10, 0 )

[node name="RightWallRaycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RightWallRaycasts"]
position = Vector2( 18, -2 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="RightWallRaycasts"]
position = Vector2( 18, 20 )
enabled = true
cast_to = Vector2( 10, 0 )

[connection signal="hit" from="." to="." method="_on_Player_hit"]
[connection signal="set_camera_limit" from="." to="." method="_on_Player_set_camera_limit"]
[connection signal="start_dash" from="." to="." method="_on_Player_start_dash"]
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
